<resources>
    <string name="facebook_app_id">810530662416922</string>
    <string name="header_user">User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="app_name">IT Travel</string>
    <string name="action_settings">Settings</string>
    <string name="no_results_found">No Results Found.</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="starred">Starred</string>
    <string name="featured">Featured</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="about_us">About Us</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="animation">Settings</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="header_categories">Categories</string>
    <string name="header_extras">Extras</string>
    <string name="header_users">Users</string>
    <string name="rate_it">Rate It!</string>
    <string name="average_based_on">average based on</string>
    <string name="rating">rating</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="rate_store">Rate Store</string>
    <string name="ok">OK</string>
    <string name="network_error">Network Error</string>
    <string name="no_network_connection">No Network Connection.</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_login_to_facebook">Login to Facebook</string>
    <string name="button_login_to_twitter">Login to Twitter</string>
    <string name="view">View</string>
    <string name="comments">Comment(s)</string>
    <string name="login_error">Login Error</string>
    <string name="login_error_review">You need to login before you can post review.</string>
    <string name="login_error_rating">You need to login before you can rate a store.</string>
    <string name="rating_error">Rating Error</string>
    <string name="rating_error_finish">You have finished rating this store.</string>
    <string name="rating_error_something_wrong">Error while connecting. Please rate again later.</string>
    <string name="choose_browser">Choose a browser :</string>
    <string name="choose_email_client">Choose an Email client :</string>
    <string name="email_subject">Store Inquiry</string>
    <string name="email_body">Hi, your store is awesome.</string>
    <string name="cannot_proceed">Cannot proceed because details isnt provided.</string>
    <string name="no_image_to_display">No image to be displayed.</string>
    <string name="handset_not_supported">This handset doest not support telephony service.</string>
    <string name="action_error">Action Error</string>
    <string name="sms_body">Hi, your store is awesome.</string>
    <string name="review">Review</string>
    <string name="problems_encountered_facebook">Problems encountered while posting to Facebook.</string>
    <string name="publish_cancelled">Publish cancelled.</string>
    <string name="publish_error">Publishing Error</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="user_name">Username</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="some_fields_are_missing">Some fields are missing.</string>
    <string name="password_length_error">Password must be at lease 8 characters long.</string>
    <string name="field_error">Field Error</string>
    <string name="update_profile">Update Profile</string>
    <string name="search_by_name_or_address">Search by Name or Address</string>
    <string name="radius">Radius</string>
    <string name="km">Km.</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="all_categories">All Categories</string>
    <string name="no_rating">No Rating</string>
    <string name="location_error">Location Error</string>
    <string name="cannot_determine_location">Cannot determine location.</string>
    <string name="cannot_determine_direction">Failed to get direction.</string>
    <string name="weather_placeholder">-------</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="route_error">Route Error</string>
    <string name="route_error_details">Cannot route current location.</string>
    <string name="googlemapsapi">AIzaSyBRXBqFhDnMe189jjb-JlK8Afu9uGo09q0</string>
    <string name="share">Share</string>
    <string name="placeholder_review">Review</string>
    <string name="chars_left">Char(s) left</string>
    <string name="about_us_detail">Aplikasi ini memmuat tentang informasi wisata di indonesia\n\n yang berisikan tentang detail tempat wisatanya.</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_details">1.) aplikasi kami akan menuntun anda untuk merekomendasikan tempat tempat wisata yang wajib di kunjungi.\n\n2.)Akun yang terdapat di aplikasi kami tidak akan pernah di gunakan ke dalam hal kriminalitas.. dan hanya digunakan untuK keamanan pengguna.\n\n3.) iTravel selalu ada untuk melengkapi liburan anda dimana pun dan kapan pun, dengan iTravel liburan anda akan semakin lengkap .</string>
    <string name="logout">Logout</string>
    <string name="text_empty">-------</string>
    <string name="email_subject_company">Store Finder Inquiry</string>
    <string name="email_body_company">Hi! Good day.</string>
    <string name="alert_logout_user_title">Logout User</string>
    <string name="alert_logout_user_title_details">Are you sure you want to logout?</string>
    <string name="alert_logout_user_yes">Yes</string>
    <string name="alert_logout_user_no">No</string>
    <string name="click_to_add_edit">Click to Add/Edit</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="mi">Mi</string>
    <string name="find_nearby">Find Nearby</string>
    <string name="empty_error">Text Empty Error</string>
    <string name="empty_error_details">Provide text for review.</string>
    <string name="no_name"></string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="failed_data">Failed to get data.</string>
    <string name="editing_fields">**When editing all fields are necessary.</string>
    <string name="loading">Loading...</string>
    <string name="tap_back_again_to_exit">Please tap back again to exit the app.</string>
    <string name="empty_distance">----</string>
    <string name="problems_encountered_login">Problems encountered during login.</string>
    <string name="store_nearby_radius">Store Nearby Radius</string>
    <string name="login_error_undetermined">Error encountered during connecting.</string>
    <string name="enter_radius">Enter Radius in KM</string>
    <string name="enter_radius_in_km">Radius in KM:</string>
    <string name="call_block_error">Cannot proceed to calling.</string>
    <string name="download_app">Hey! I found this store. Download our app.</string>
    <string name="select_one_store">You need to select one store by tapping the Info window.</string>
    <string name="gps_not_on">GPS is currently turn off. Please enable it under your mobile Settings > Location.</string>
    <string name="settings">Settings</string>
    <string name="radius_nearby">Radius Nearby</string>
    <string name="radius_nearby_msg">Enter radius in Km.</string>
    <string name="app_settings">App Settings</string>
    <string name="max">Max</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_application_version">Application Version</string>
    <string name="title_activity_settings">Settings</string>
    <string name="store_reviews">Store Reviews</string>
    <string name="store_details">Store Details</string>
    <string name="store_images">Store Images</string>
    <string name="twitter_app_error">Twitter App Error</string>
    <string name="twitter_app_error_details">Twitter App not found. Please install it from the Google Play.</string>
    <string name="loading_image">Loading Image...</string>
    <string name="logging_in">Logging in</string>
    <string name="search_results">Search Results</string>
    <string name="new_review">New Review</string>
    <string name="news_detail">News Detail</string>
    <string name="results">Results</string>
    <string name="login_error_details">Empty Username/Password field.</string>
    <string name="permission_error">Permission Error</string>
    <string name="permission_error_details_location">Permission location denied. You need to turn on location to get relevant results for the stores nearby.</string>
    <string name="go_to_settings">Settings</string>
    <string name="location_error_not_turned_on">No data to be shown because you decline the location request.</string>
    <string name="grant_permission_call">You need to grant permission request for calling.</string>
    <string name="grant_permission_sms">You need to grant permission request for sms.</string>
    <string name="grant_permission_storage">You need to grant permission request for reading to storage.</string>
    <string name="no_stores_found_nearby">No stores found nearby.</string>
    <string name="delete_account">Delete Account?</string>
    <string name="alert_delete_user_title">Delete Account</string>
    <string name="alert_delete_user_title_details">Are you sure you want to delete your account? This is irreversible. All your account details will be removed and couldn\'t be accessed anymore.</string>
    <string name="proceed">Proceed</string>
    <string name="alert_delete_review_title">Delete Review</string>
    <string name="alert_delete_review_title_details">Are you sure you want to delete your review?</string>
    <string name="yes">Yes</string>
    <string name="consent">Consent</string>
    <string name="age_consent_title">How old are you?</string>
    <string name="age_consent_category">Age</string>
    <string name="age_consent_what">https://gdpr-info.eu/art-8-gdpr/</string>
    <string name="age_consent_why_needed">You must be at least 16 years of age to use this App.</string>
    <string name="age_consent_more_information">Due to European regulations, you must be at least 16 years of age to use this App.</string>
    <string name="basic_app_consent_title">Basic functions</string>
    <string name="basic_app_consent_category">Application</string>
    <string name="basic_app_consent_what">http://example.com/gdpr</string>
    <string name="basic_app_consent_why_needed">We store your E-mail address, password, username, Facebook ID and Twitter ID in our server.</string>
    <string name="basic_app_consent_more_information">The email address is used to send you newsletter. You can opt-out during our mass newsletter. Username, Password, Facebook and Twitter ID are used to be able to logged in the app to leave reviews and ratings. You can delete this account under profile page and also if you manage to leave reviews then you can delete it too. </string>
    <string name="ads_consent_title">Advertising</string>
    <string name="ads_consent_category">Monetization</string>
</resources>